# pnpm

./: .gitignore  README.md  README.rst  copy+paste.py  pyproject.toml
aaaaaaaafgffgaa/: .release.py  README.md  index.html  package.json  rollup.config.js  setup  watchtower
aaaaaaaafgffgaaa/: .pnp.js  .release.py  README.md  package.json  rollup.config.js  setup  watchtower
aaaaaaaafgffgaaa/.yarn/: build-state.yml
aaaaaaaafgffgaaa/docs/: index.html
docs/: .pnpm.yml  README.md  index.html  package-lock.json  package.json  rollup.config.js
docs/.pnpm/: config.yml  requirements.txt
docs/.pnpm/scripts/: .release.py  _script.py  build  dev  release  sass  server  setup
docs/docs/: docs_demo.js  stats.html
docs/docs/scripts/: docs.umd.js
docs/src/: index.js
docs/src/.build_assets/: icons.json  index.js  styles.json
docs/src/elements/: code.js  index.js
docs/src/styles/: main.scss
pnpm/: __init__.py  cli  generate  generate.py  helpers.py  install  install.py  pnpm
pnpm/generator/-_pkg__/: .release.py  README.md  package.json  rollup.config.js  setup  watchtower
pnpm/generator/__pkg__/: .gitattributes  .gitignore  .release.py  .requirements.txt  README.md  package.json  rollup.config.js  watchtower
pnpm/generator/docs/: -__pkg__.js  index.html
tests/: test_pnpm.py
website/: README.md  package.json  rollup.config.js
website/.pnpm/scripts/: .release.py  build  setup
website/docs/: index.html  website_demo.js
website/docs/scripts/: website.umd.js
website/src/: index.js
website/src/.build_assets/: index.js  styles.json
(+13 files in other folders)
