[tool.poetry]
name = "pnpm"
version = "0.1.4"
description = ""
authors = ["robo-monk <rrobomonk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^9.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
